--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
     <!-- Join Community Button -->
   <div style="text-align: center; margin: 2rem 0;">
     <p style="margin-bottom: 0.5rem; font-size: 0.95rem;">Join our private community</p>
-    <a href="https://playfulheartparenting.podia.com/community" target="_blank" style="
+    <a href="https://www.playfulheartparenting.com/play-mode-activators" target="_blank" style="
       background-color: #f6e395;
       color: #1a0b8b;
       padding: 10px 20px;
