--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
   <!-- Footer + Info Box -->
 <div style="margin-top: 3rem; display: flex; justify-content: center;">
 <div style="max-width: 600px; width: 100%; background: linear-gradient(135deg, #1a0b8b, #3c2daf); padding: 1.5rem; border-radius: 12px; text-align: left; font-size: 0.9rem; color: white;">
-    <p style="margin-top: 0;"><strong>Need a refresher?</strong></p>
+    <p style="margin-top: 0;"><strong>Course Access</strong></p>
     <p>
       • Set up course audio access: <a href="https://app.helloaudio.fm/feed/2cb2dff8-1647-42b2-a31c-34f9a58a4952/signup" target="_blank" style="color: #f6e395; text-decoration: underline;">Listen on the podcast player of your choice</a>
     </p>
