--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     <img src="activate-play-mode-icon.png" alt="Activate Play Mode logo" class="logo" />
     <h1 style="text-align: center; margin-bottom: 0.5rem;">Activate Play Mode</h1>
     <h2 style="text-align: center; font-weight: normal; margin: 0;">Playful Strategies</h2>
-    <p style="text-align: center; font-size: 0.95rem;">Tap a strategy for a reminder and the example video</p>
+    <p style="text-align: center; font-size: 0.95rem;">Tap a strategy for summary & example videos</p>
 
     <!-- STRATEGY BLOCKS BEGIN -->
 
