--- a/index.html
+++ b/index.html
@@ -126,18 +126,20 @@
     <h2 style="text-align: center; font-weight: normal; margin: 0;">Playful Strategies</h2>
     <p style="text-align: center; font-size: 0.95rem;">Tap a strategy for summary & example videos</p>
     <p style="text-align: center; font-size: 0.9rem; margin-top: 0.5rem; color: #f6e395;">
+  <p style="text-align: left; font-size: 0.9rem; margin-top: 0.5rem; color: #f6e395;">
   💛 Loving Reminder: Practice play when stakes are low and vibes are good — Rule #1: For the sake of fun!
 </p>
 
-<div style="margin: 1.5rem auto; text-align: center; max-width: 500px; color: #f6e395;">
+<div style="margin: 1.5rem auto; text-align: left; max-width: 500px; color: #f6e395;">
   <p style="margin: 0; font-weight: bold; font-size: 1rem;">
-    POWER<br>POWER<br>REVERSAL<br>REVERSAL
+    ⚡ POWER REVERSAL
   </p>
   <p style="margin: 0.5rem 0 0 0; font-size: 0.9rem; line-height: 1.4;">
     Kiddo = strong, clever, powerful.<br>
     Grownup = confused, weak, foolish, scared, wrong, “furious.”
   </p>
 </div>
+
 
 
     <!-- STRATEGY BLOCKS BEGIN -->
