--- a/index.html
+++ b/index.html
@@ -125,12 +125,11 @@
     <h1 style="text-align: center; margin-bottom: 0.5rem;">Activate Play Mode</h1>
     <h2 style="text-align: center; font-weight: normal; margin: 0;">Playful Strategies</h2>
     <p style="text-align: center; font-size: 0.95rem;">Tap a strategy for summary & example videos</p>
-    <p style="text-align: center; font-size: 0.9rem; margin-top: 0.5rem; color: #f6e395;">
-  <p style="text-align: left; font-size: 0.9rem; margin-top: 0.5rem; color: #f6e395;">
+   <p style="text-align: left; font-size: 0.9rem; margin-top: 0.5rem; color: #f6e395;">
   💛 Loving Reminder: Practice play when stakes are low and vibes are good — Rule #1: For the sake of fun!
 </p>
 
-<div style="margin: 1.5rem auto; text-align: left; max-width: 500px; color: #f6e395;">
+<div style="margin: 1.5rem auto; text-align: left; max-width: 500px; background-color: #f6e395; color: #1a0b8b; padding: 1rem; border-radius: 10px;">
   <p style="margin: 0; font-weight: bold; font-size: 1rem;">
     ⚡ POWER REVERSAL
   </p>
