--- a/index.html
+++ b/index.html
@@ -146,11 +146,11 @@
     <div class="strategy">
       <button class="collapsible"><img src="icons/1.png" class="strategy-icon" alt="Personification" />Personification</button>
       <div class="content">
-        <p><strong>What it is:</strong> Bringing inanimate objects to life — like a toy, snack, or sock — to redirect energy with silliness.</p>
+        <p><strong>What it is:</strong> Bringing inanimate objects to life as a playful “buffer,” like a toy, bite of food, or your own foot!</p>
         <ul>
-          <li>Toothbrush "cleaning ladies" begging not to work</li>
-          <li>Broccoli yelling "Just a trim!"</li>
-          <li>Shoes that want to dance</li>
+          <li>The hungry laundry hamper desperate for stinky socks</li>
+          <li>Broccoli wanting a haircut - "Just a trim!"</li>
+          <li>"Sugar bugs" begging you not to brush them away</li>
         </ul>
         <video controls><source src="videos/1 - Personification.mp4" type="video/mp4" /></video>
       </div>
@@ -159,11 +159,11 @@
     <div class="strategy">
       <button class="collapsible"><img src="icons/2.png" class="strategy-icon" alt="Mechanical Play" />Mechanical Play</button>
       <div class="content">
-        <p><strong>What it is:</strong> Pretending to be a robot, machine, or voice assistant.</p>
+        <p><strong>What it is:</strong> Using robotic, automated, or system-like behaviors, like pretending to be a robot or machine.</p>
         <ul>
           <li>Rewind button for do-overs</li>
           <li>GPS voice giving instructions</li>
-          <li>"Volume knob" for behavior</li>
+          <li>Robot voice for channeling your own frustration</li>
         </ul>
         <video controls><source src="videos/2 - Mechanical Play.mp4" type="video/mp4" /></video>
       </div>
