--- a/index.html
+++ b/index.html
@@ -172,11 +172,11 @@
     <div class="strategy">
       <button class="collapsible"><img src="icons/3.png" class="strategy-icon" alt="Playing the Opposite" />Playing the Opposite</button>
       <div class="content">
-        <p><strong>What it is:</strong> Acting shocked or upset when your child does exactly what you want.</p>
+        <p><strong>What it is:</strong> Pretending to be dramatically surprised or horrified when your child does exactly what you were hoping for — a playful twist they love being in on.</p>
         <ul>
-          <li>"Don’t eat that broccoli while I’m not looking!"</li>
-          <li>"If you take that medicine, I’ll moo like a cow!"</li>
-          <li>"Nooo, don’t smile at me!"</li>
+          <li>"I hope nobody steals this bite while I’m not looking!"</li>
+          <li>"If you take that medicine, I’ll be so mad I'll moo like an angry cow!"</li>
+          <li>"Try on their clothes and wail that your clothes have shrunk"</li>
         </ul>
         <video controls><source src="videos/3 - Playing the Opposite.mp4" type="video/mp4" /></video>
       </div>
@@ -187,9 +187,9 @@
       <div class="content">
         <p><strong>What it is:</strong> Turning tasks into a game, challenge, or silly contest.</p>
         <ul>
-          <li>Race against the clean-up song</li>
-          <li>Who can blow the biggest bubble?</li>
-          <li>Silent screaming challenge</li>
+          <li>There's no way you can get to the door in just ten steps...</li>
+          <li>Race each other to finish a chore.</li>
+          <li>Who can scream the quietest??</li>
         </ul>
         <video controls><source src="videos/4 - Challenges and Gamifying.mp4" type="video/mp4" /></video>
       </div>
@@ -198,11 +198,11 @@
     <div class="strategy">
       <button class="collapsible"><img src="icons/5.png" class="strategy-icon" alt="Magic, Mystery, & Confusion" />Magic, Mystery, & Confusion</button>
       <div class="content">
-        <p><strong>What it is:</strong> Pretending something magical or mysterious is happening.</p>
+        <p><strong>What it is:</strong> Something mysterious or magical is happening. React with confusion, astonishment, or awe.</p>
         <ul>
-          <li>Freeze spells or floating objects</li>
-          <li>Lotion disappears with a gasp</li>
-          <li>Force field until they say "please"</li>
+          <li>"Freeze" when they forget to say "please"</li>
+          <li>Act “freaked out” that a dish “floated itself” into the sink</li>
+          <li>"Abra-pajama! Maybe these PJs will fly on by themselves!”</li>
         </ul>
         <video controls><source src="videos/5 - Mystery Magic and Confusion.mp4" type="video/mp4" /></video>
       </div>
@@ -211,11 +211,11 @@
     <div class="strategy">
       <button class="collapsible"><img src="icons/6.png" class="strategy-icon" alt="Make it a Musical" />Make it a Musical</button>
       <div class="content">
-        <p><strong>What it is:</strong> Turning routines into musical numbers, chants, or dances.</p>
+        <p><strong>What it is:</strong> Incorporating songs, rhythms, and dancing into routines, tasks, or challenging moments.</p>
         <ul>
           <li>Opera singing instead of yelling</li>
-          <li>Silent disco transitions</li>
-          <li>Toothbrushing jingles</li>
+          <li>Singing or chanting instructions to familiar tunes </li>
+          <li>Doing a silly dance as a “reward”</li>
         </ul>
         <video controls><source src="videos/6 - Make it a Musical.mp4" type="video/mp4" /></video>
       </div>
@@ -224,11 +224,11 @@
     <div class="strategy">
       <button class="collapsible"><img src="icons/7.png" class="strategy-icon" alt="Characters & Role Play" />Characters & Role Play</button>
       <div class="content">
-        <p><strong>What it is:</strong> Taking on a silly persona or letting them do it instead of just giving directions.</p>
+        <p><strong>What it is:</strong> Pretending to be anyone or anything but yourself OR that your child is a character.</p>
         <ul>
-          <li>Butt-Wiper 3000</li>
+          <li>"Hello. Did you call for a professional butt-wiper?"</li>
           <li>Villain trying to vacuum up toys</li>
-          <li>Announcer at the “bedtime Olympics”</li>
+          <li>Announcer at the “Bedtime Olympics”</li>
         </ul>
         <video controls><source src="videos/7 - Characters and Role Play.mp4" type="video/mp4" /></video>
       </div>
@@ -237,11 +237,11 @@
     <div class="strategy">
       <button class="collapsible"><img src="icons/8.png" class="strategy-icon" alt="Storytelling" />Storytelling</button>
       <div class="content">
-        <p><strong>What it is:</strong> Narrating real life like an adventure or telling silly made-up stories.</p>
+        <p><strong>What it is:</strong> Narrating reality or collaborating on a fictional story for processing, connection, regulation, repair.</p>
         <ul>
-          <li>The panda mom who roared too loud</li>
-          <li>Fortunately/unfortunately games</li>
-          <li>Swamp alligator with stinky breath</li>
+          <li>"The panda mom who roared too loud" - after yelling.</li>
+          <li>Build a collaborative story one sentence or word at a time - great for car rides, restaurants, waiting rooms, bedtime.</li>
+          <li>Narrate what's happening to soften scary moments — “Once upon a time, there was a brave boy…”</li>
         </ul>
         <video controls><source src="videos/8 - Storytelling.mp4" type="video/mp4" /></video>
       </div>
@@ -252,9 +252,9 @@
       <div class="content">
         <p><strong>What it is:</strong> Using dramatic, poetic, or VIP language to frame boring stuff as fun or fancy.</p>
         <ul>
-          <li>“Welcome to the bedtime spa”</li>
-          <li>“We’re entering the grocery gauntlet!”</li>
-          <li>“Sir Broccoli must save the castle!”</li>
+          <li>“Welcome to the bedtime spa, Madame!”</li>
+          <li>Giving a dramatic speech for something ordinary, like bidding farewell to a pair of shoes your child has outgrown.</li>
+          <li>"The car is a spaceship – buckle up for blastoff!"</li>
         </ul>
         <video controls><source src="videos/9 - Romanticizing the Mundane.mp4" type="video/mp4" /></video>
       </div>
@@ -263,11 +263,11 @@
     <div class="strategy">
       <button class="collapsible"><img src="icons/10.png" class="strategy-icon" alt="Body & Breath" />Body & Breath</button>
       <div class="content">
-        <p><strong>What it is:</strong> Regulating through movement, breathing, or silly physical contact.</p>
+        <p><strong>What it is:</strong> Making breathing, movement, and physical contact fun, helping everyone reset and regulate.</p>
         <ul>
-          <li>Power-on shoulders: scrunch/drop</li>
-          <li>Blow each other across the room</li>
-          <li>Lemon face / orange face</li>
+          <li>"Push against my hands as hard as you can."</li>
+          <li>Huff puff and blow each other across the room.</li>
+          <li>"Is that all ya got?" pillow punching game.</li>
         </ul>
         <video controls><source src="videos/10 - Body and Breath.mp4" type="video/mp4" /></video>
       </div>
@@ -276,11 +276,11 @@
     <div class="strategy">
       <button class="collapsible"><img src="icons/11.png" class="strategy-icon" alt="General Nonsense" />General Nonsense</button>
       <div class="content">
-        <p><strong>What it is:</strong> Gibberish, silly voices, fart monsters — for interrupting tension and reconnecting.</p>
+        <p><strong>What it is:</strong> Random silliness to diffuse tension — nicknames, banana phones, fart noises, silly faces & sounds.</p>
         <ul>
-          <li>Banana phone conversation</li>
-          <li>1, 2, 3… FART! instead of "cheese"</li>
-          <li>“What have you DONE?!” in goofy voice</li>
+          <li>Having a silly two-voice conversation with yourself when they're not talkative.</li>
+          <li>1, 2, 3… FART! instead of "cheese!"</li>
+          <li>Using a spatula to “pry” them out of bed.</li>
         </ul>
         <video controls><source src="videos/11 - General Nonsense.mp4" type="video/mp4" /></video>
       </div>
