--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
         <ul>
           <li>"I hope nobody steals this bite while I’m not looking!"</li>
           <li>"If you take that medicine, I’ll be so mad I'll moo like an angry cow!"</li>
-          <li>"Try on their clothes and wail that your clothes have shrunk"</li>
+          <li>Try on their clothes and wail that your clothes have shrunk!</li>
         </ul>
         <video controls><source src="videos/3 - Playing the Opposite.mp4" type="video/mp4" /></video>
       </div>
