--- a/index.html
+++ b/index.html
@@ -187,9 +187,9 @@
       <div class="content">
         <p><strong>What it is:</strong> Turning tasks into a game, challenge, or silly contest.</p>
         <ul>
-          <li>There's no way you can get to the door in just ten steps...</li>
+          <li>"There's no WAY you can get to the door in just ten steps..."</li>
           <li>Race each other to finish a chore.</li>
-          <li>Who can scream the quietest??</li>
+          <li>"Who can scream the quietest??"</li>
         </ul>
         <video controls><source src="videos/4 - Challenges and Gamifying.mp4" type="video/mp4" /></video>
       </div>
