--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
   💛 Loving Reminder: Practice play when stakes are low and vibes are good — Rule #1: For the sake of fun!
 </p>
 
-<div style="margin: 1.5rem auto; text-align: left; max-width: 500px; background-color: #f6e395; color: #1a0b8b; padding: 1rem; border-radius: 10px;">
+<div style="margin: 1.5rem auto; text-align: left; max-width: 500px; background-color: #e4dbf8; color: #1a0b8b; padding: 1rem; border-radius: 10px;">
   <p style="margin: 0; font-weight: bold; font-size: 1rem;">
     ⚡ POWER REVERSAL
   </p>
