--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
       • <a href="guidebook.pdf" target="_blank" style="color: #f6e395; text-decoration: underline;">Activate Play Mode Guidebook PDF</a>
     </p>
 
-    <p>Questions, feedback, or something to share?<br>
+    <p>Questions, feedback, tech troubles, or something to share?<br>
     Email Mia at <a href="mailto:mia@playfulheartparenting.com" style="color: #f6e395; text-decoration: underline;">mia@playfulheartparenting.com</a></p>
 
     <p style="margin-top: 2rem; font-size: 0.8rem; color: rgba(255,255,255,0.6);">
