--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
     <div class="strategy">
       <button class="collapsible"><img src="icons/1.png" class="strategy-icon" alt="Personification" />Personification</button>
       <div class="content">
-        <p><strong>What it is:</strong> Bringing inanimate objects to life as a playful “buffer,” like a toy, bite of food, or your own foot!</p>
+        <p>Bringing inanimate objects to life as a playful “buffer,” like a toy, bite of food, or your own foot!</p>
         <ul>
           <li>The hungry laundry hamper desperate for stinky socks</li>
           <li>Broccoli wanting a haircut - "Just a trim!"</li>
@@ -159,7 +159,7 @@
     <div class="strategy">
       <button class="collapsible"><img src="icons/2.png" class="strategy-icon" alt="Mechanical Play" />Mechanical Play</button>
       <div class="content">
-        <p><strong>What it is:</strong> Using robotic, automated, or system-like behaviors, like pretending to be a robot or machine.</p>
+        <p>Using robotic, automated, or system-like behaviors, like pretending to be a robot or machine.</p>
         <ul>
           <li>Rewind button for do-overs</li>
           <li>GPS voice giving instructions</li>
@@ -172,7 +172,7 @@
     <div class="strategy">
       <button class="collapsible"><img src="icons/3.png" class="strategy-icon" alt="Playing the Opposite" />Playing the Opposite</button>
       <div class="content">
-        <p><strong>What it is:</strong> Pretending to be dramatically surprised or horrified when your child does exactly what you were hoping for — a playful twist they love being in on.</p>
+        <p>Pretending to be dramatically surprised or horrified when your child does exactly what you were hoping for — a playful twist they love being in on.</p>
         <ul>
           <li>"I hope nobody steals this bite while I’m not looking!"</li>
           <li>"If you take that medicine, I’ll be so mad I'll moo like an angry cow!"</li>
@@ -185,7 +185,7 @@
     <div class="strategy">
       <button class="collapsible"><img src="icons/4.png" class="strategy-icon" alt="Challenges & Gamifying" />Challenges & Gamifying</button>
       <div class="content">
-        <p><strong>What it is:</strong> Turning tasks into a game, challenge, or silly contest.</p>
+        <p>Turning tasks into a game, challenge, or silly contest.</p>
         <ul>
           <li>"There's no WAY you can get to the door in just ten steps..."</li>
           <li>Race each other to finish a chore.</li>
@@ -198,7 +198,7 @@
     <div class="strategy">
       <button class="collapsible"><img src="icons/5.png" class="strategy-icon" alt="Magic, Mystery, & Confusion" />Magic, Mystery, & Confusion</button>
       <div class="content">
-        <p><strong>What it is:</strong> Something mysterious or magical is happening. React with confusion, astonishment, or awe.</p>
+        <p>Something mysterious or magical is happening. React with confusion, astonishment, or awe.</p>
         <ul>
           <li>"Freeze" when they forget to say "please"</li>
           <li>Act “freaked out” that a dish “floated itself” into the sink</li>
@@ -211,7 +211,7 @@
     <div class="strategy">
       <button class="collapsible"><img src="icons/6.png" class="strategy-icon" alt="Make it a Musical" />Make it a Musical</button>
       <div class="content">
-        <p><strong>What it is:</strong> Incorporating songs, rhythms, and dancing into routines, tasks, or challenging moments.</p>
+        <p>Incorporating songs, rhythms, and dancing into routines, tasks, or challenging moments.</p>
         <ul>
           <li>Opera singing instead of yelling</li>
           <li>Singing or chanting instructions to familiar tunes </li>
@@ -224,7 +224,7 @@
     <div class="strategy">
       <button class="collapsible"><img src="icons/7.png" class="strategy-icon" alt="Characters & Role Play" />Characters & Role Play</button>
       <div class="content">
-        <p><strong>What it is:</strong> Pretending to be anyone or anything but yourself OR that your child is a character.</p>
+        <p>Pretending to be anyone or anything but yourself OR that your child is a character.</p>
         <ul>
           <li>"Hello. Did you call for a professional butt-wiper?"</li>
           <li>Villain trying to vacuum up toys</li>
@@ -237,7 +237,7 @@
     <div class="strategy">
       <button class="collapsible"><img src="icons/8.png" class="strategy-icon" alt="Storytelling" />Storytelling</button>
       <div class="content">
-        <p><strong>What it is:</strong> Narrating reality or collaborating on a fictional story for processing, connection, regulation, repair.</p>
+        <p>Narrating reality or collaborating on a fictional story for processing, connection, regulation, repair.</p>
         <ul>
           <li>"The panda mom who roared too loud" - after yelling.</li>
           <li>Build a collaborative story one sentence or word at a time - great for car rides, restaurants, waiting rooms, bedtime.</li>
@@ -250,7 +250,7 @@
     <div class="strategy">
       <button class="collapsible"><img src="icons/9.png" class="strategy-icon" alt="Romanticizing the Mundane" />Romanticizing the Mundane</button>
       <div class="content">
-        <p><strong>What it is:</strong> Using dramatic, poetic, or VIP language to frame boring stuff as fun or fancy.</p>
+        <p>Using dramatic, poetic, or VIP language to frame boring stuff as fun or fancy.</p>
         <ul>
           <li>“Welcome to the bedtime spa, Madame!”</li>
           <li>Giving a dramatic speech for something ordinary, like bidding farewell to a pair of shoes your child has outgrown.</li>
@@ -263,7 +263,7 @@
     <div class="strategy">
       <button class="collapsible"><img src="icons/10.png" class="strategy-icon" alt="Body & Breath" />Body & Breath</button>
       <div class="content">
-        <p><strong>What it is:</strong> Making breathing, movement, and physical contact fun, helping everyone reset and regulate.</p>
+        <p>Making breathing, movement, and physical contact fun, helping everyone reset and regulate.</p>
         <ul>
           <li>"Push against my hands as hard as you can."</li>
           <li>Huff puff and blow each other across the room.</li>
@@ -276,7 +276,7 @@
     <div class="strategy">
       <button class="collapsible"><img src="icons/11.png" class="strategy-icon" alt="General Nonsense" />General Nonsense</button>
       <div class="content">
-        <p><strong>What it is:</strong> Random silliness to diffuse tension — nicknames, banana phones, fart noises, silly faces & sounds.</p>
+        <p>Random silliness to diffuse tension — nicknames, banana phones, fart noises, silly faces & sounds.</p>
         <ul>
           <li>Having a silly two-voice conversation with yourself when they're not talkative.</li>
           <li>1, 2, 3… FART! instead of "cheese!"</li>
