--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
     <div class="strategy">
       <button class="collapsible"><img src="icons/3.png" class="strategy-icon" alt="Playing the Opposite" />Playing the Opposite</button>
       <div class="content">
-        <p>Pretending to be dramatically surprised or horrified when your child does exactly what you were hoping for — a playful twist they love being in on.</p>
+        <p>Pretending to be dramatically surprised or horrified when your child does exactly what you were hoping for — or just being downright clueless and wrong - a playful twist they love being in on.</p>
         <ul>
           <li>"I hope nobody steals this bite while I’m not looking!"</li>
           <li>"If you take that medicine, I’ll be so mad I'll moo like an angry cow!"</li>
