--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
     <div class="strategy">
       <button class="collapsible"><img src="icons/4.png" class="strategy-icon" alt="Challenges & Gamifying" />Challenges & Gamifying</button>
       <div class="content">
-        <p>Turning tasks into a game, challenge, or silly contest.</p>
+        <p>Turning tasks or tricky moments into a game, challenge, or silly contest.</p>
         <ul>
           <li>"There's no WAY you can get to the door in just ten steps..."</li>
           <li>Race each other to finish a chore.</li>
